src/tests/testfiles/binary-operators/types-3.txt
Error at 2:9: Comparison operator operands need to be of same type (have char[] and char)
"a" != 'b';
    ^
